[package]
name = "rollup-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.10", features = ["rand"] }
op-alloy-rpc-types-engine = "0.10.5"
op-alloy-rpc-types = "0.10.5"
op-alloy-rpc-jsonrpsee = { version = "0.10.5", features = ["client"] }
alloy-rpc-types-engine = "0.11"
alloy-rpc-types-eth = "0.11"
alloy-eips = { version = "0.11.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.11"
clap = { version = "4", features = ["derive", "env"] }
jsonrpsee = { version = "0.24", features = ["server", "http-client", "macros"] }
lru = "0.13.0"
reqwest = "0.12.5"
http = "1.1.0"
dotenv = "0.15.0"
tower = "0.4.13"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27.0", features = ["ring"] }
rustls = { version = "0.23.23", features = ["ring"] }
serde_json = "1.0.96"
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.2.0" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.2.0" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.2.0" }
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-http = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = [
    "http-proto",
    "http-json",
    "reqwest-client",
    "trace",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.29.0"
futures = "0.3.31"
metrics-derive = "0.1"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
metrics-process = "2.3.1"
metrics-util = "0.19.0"
eyre = "0.6.12"
paste = "1.0.15"

# dev dependencies for integration tests
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
futures-util = "0.3.31"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.0.10"
predicates = "3.1.2"
ctor = "0.3.5"

[features]
integration = []
